--- a/example-app/public/css/style.css
+++ b/example-app/public/css/style.css
@@ -244,6 +244,13 @@ h1,h2,h3 {
     gap: 100px;
     border: 10px solid gray;
 }
+@media(max-width: 991px){
+    .parent {
+        flex-direction: column;
+        gap: 20px;
+    }
+    
+}
 
 .form-show {
     display: flex;
@@ -262,6 +269,11 @@ h1,h2,h3 {
     width: 500px;
     box-shadow: 10px 10px 10px gray;
     
+}
+@media(max-width: 568px){
+    .img-show {
+        height: auto;
+    }
 }
 
 .van-info {
